8315431: ArchiveHeapWriter::get_filler_size_at() cannot handle buffer expansion